change background of navigation

--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -3,6 +3,10 @@ body {
     height: 100%;
 }
 
+.navbar-inverse{
+    background-color: #800000;
+}
+
 .wrap {
     min-height: 100%;
     height: auto;
